--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
-      - name: Run tests
-        run: uv run pytest tests
+#      - name: Run tests
+#        run: uv run pytest tests
