--- a/.github/workflows/release_action.yaml
+++ b/.github/workflows/release_action.yaml
@@ -30,6 +30,9 @@ jobs:
     - name: Install the project
       run: uv sync --all-extras --dev
 
+    - name: Install project in editable mode
+      run: uv pip install -e .
+
     - name: Run tests
       run: uv run pytest tests
 
