--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dask[array]>=2025.9.1",
+    "matplotlib>=3.10.6",
     "numcodecs>=0.16.2",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
