--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pandas>=2.3.2",
     "s3fs>=2025.9.0",
     "scipy>=1.16.2",
+    "tqdm>=4.67.1",
     "xarray>=2025.9.0",
     "zarr>=3.1.2",
 ]
