--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "s3fs>=2025.9.0",
     "scipy>=1.16.2",
     "tqdm>=4.67.1",
-    "xarray>=2025.9.0",
+    "xarray[complete]>=2025.9.0",
     "zarr>=3.1.2",
 ]
 
